# activity_service

./: CMakeLists.txt  README.md  main.c
EOP/activity/: CMakeLists.txt
EOP/activity/controllers/: EOP_activity_controller.c  EOP_activity_controller.h  activity_controller.c  activity_controller.h
EOP/activity/data/: EOP_activity_sql.h  EOP_activity_tables.h  activity_info.h
EOP/activity/data/dao/: EOP_activity_dao.c  EOP_activity_dao.h
EOP/activity/data/dto/: AlertAction.h  HistoryRecord.h  activity_dto.c
EOP/activity/data/mapper/: EOP_activity_mapper.c  EOP_activity_mapper.h
EOP/activity/data/model/: EOP_action_alert.h  EOP_activity_delete_data.h  EOP_activity_err_code.h  EOP_error_alert.h  EOP_history_record.h
EOP/activity/service/: EOP_activity_service.c  EOP_activity_service.h
controllers/: activity_controller.c
data/dto/: ErrorAction.h  activity_dto.c  activity_dto.h
docs/: EOP_activity_doc.docx  Eop.docx  Требования_к_сервису_“Истории активности пользователя”.docx  Требования_к_сервису_“Истории_активности_пользователя”.docx
mongoose/: mongoose.h
